--- a/app.json
+++ b/app.json
@@ -14,6 +14,10 @@
         "PATH": {
             "description": "Websocket path",
             "value": "/v2ray"
+        },
+        "PORT": {
+            "description": "Port for V2Ray (Heroku requires dynamic port)",
+            "value": "$PORT"
         }
     },
     "repository": "https://github.com/DevBE2004/xray",
