--- a/app.json
+++ b/app.json
@@ -1,25 +1,29 @@
 {
-    "name": "v2ray-heroku",
-    "description": "Deploy V2Ray to Heroku",
+    "name": "v2ray-render",
+    "description": "Deploy V2Ray to render",
     "keywords": ["v2ray", "proxy"],
     "env": {
-        "PROTOCOL": {
-            "description": "Choose vless or vmess",
-            "value": "vmess"
-        },
-        "UUID": {
-            "description": "V2Ray UUID",
-            "value": "36cfc3de-ecfd-4752-ae6f-8f0f92035143"
-        },
-        "PATH": {
-            "description": "Websocket path",
-            "value": "/v2ray"
-        },
-        "PORT": {
-            "description": "Port for V2Ray (Heroku requires dynamic port)",
-            "value": "$PORT"
-        }
+      "PROTOCOL": {
+        "description": "Choose vless or vmess",
+        "value": "vless"
+      },
+      "UUID": {
+        "description": "V2Ray UUID",
+        "value": "36cfc3de-ecfd-4752-ae6f-8f0f92035143"
+      },
+      "PATH": {
+        "description": "Websocket path",
+        "value": "/v2ray"
+      },
+      "SERVER_NAME": {
+        "description": "Server name for TLS",
+        "value": "v2ray-vmess.onrender.com"
+      },
+      "PORT": {
+        "description": "Port for V2Ray (render requires dynamic port)",
+        "value": "$PORT"
+      }
     },
     "repository": "https://github.com/DevBE2004/xray",
     "stack": "container"
-}
+  }
